Bot_Trading/04-networking/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bot-trading
  labels:
    app.kubernetes.io/name: bot-trading
    app.kubernetes.io/component: monitor
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: bot-trading
    app.kubernetes.io/component: monitor
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
